Revision history for DBIx::Class::Sims (ordered by revision number).

0.300007 Mar 15 2016 12:00:00 PDT
   - Finalize the ordering within create_item.

0.300006 Mar 10 2016 06:00:00 PDT
   - Move the preprocess hook back. This was a horrible change.

0.300005 Mar 09 2016 19:00:00 PDT
   - Move the preprocess hook to before the handling of FKs. This allows for the
     horribly hacky disabling of a FK if your data model requires such things.

0.300004 Mar 05 2016 19:00:00 PDT
   - Add support for looking things up by unique constraints (Thanks, Bluefeet!)

0.300003 Dec 08 2015 19:00:00 PDT
   - Remove MYMETA.yml (RT#108552)

0.300002 Feb 28 2014 06:45:00 PDT
   - Move the null_chance test into xt/ because the way the test is structured
     causes spurious failures.
   - Account for a change in DBD::SQLite's reporting of a NULL constraint
     violation starting in 1.41_01.

0.300001 Feb 27 2014 06:45:00 PDT
   - Upgrade the minimum DBD::SQLite requirement for building because CPANTS is
     throwing failures.

0.300000 Feb 25 2014 08:15:00 PDT
   - THIS RELEASE CONTAINS A BREAKING API CHANGE.
   - The random seed is returned as part of a new optional second value.
      - It may be specified in the call to load_sims.

0.200100 Feb 25 2014 08:15:00 PDT
   - Call toposort as a class method of TopoSort, not as a component method.
   - Allow the load_sims method to be called as a class method of Sims
      - This allows using this class without requiring it as a component.
       (Thanks, Ovid!)

0.200020 Feb 25 2014 08:15:00 PDT
   - Add the ability to set sim info at any time (not just at compile-time).
     (Thanks, Ovid!)

0.200010 Feb 25 2014 08:15:00 PDT
   - Fix a bug where multiply-specified children were not linked properly.

0.200001 Jan 07 2014 14:15:00 PDT
   - Add the missing us_firstname and us_lastname to the ::Types export list
     (Thanks, moltar!)
   - Moved to the proper version numbering (per mst)

0.20 Dec 25 2013 20:00:00 PDT